# mini-FaceApp

./: .gitignore  README.md  clean_notebook.ipynb  main.py  pyproject.toml  test.py  train.py
FaceApp/: clean_notebook.ipynb
models/: engine.py
notebooks/: VAE.ipynb
src/models/: engine.py
src/training/: training.py
src/utils/: utils.py
transformer/: transformer.ipynb
utils/: utils.py
